# Mortar-Engine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Mortar.h  Utils.h
src/VoxelGame/: CMakeLists.txt  CMakePresets.json  VoxelGame.cpp  VoxelGameScene.h
src/core/: Application.cpp  Application.h  EntryPoint.cpp  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h  cpuprof.h
src/core/component/: Camera.cpp  Camera.h
src/core/linking/: MortarObject.h  Reflection.cpp  Reflection.h  Variant.h
src/core/math/: Math.h  Transform.h
src/core/renderer/: RenderAPI.cpp  RenderAPI.h  RenderCommands.cpp  RenderCommands.h  Renderer.cpp  Renderer.h  ShaderLibrary.h
src/core/resource/: Material.h  Mesh.h  Model.h  Resource.h  Texture.cpp  Texture.h
src/core/scene/: Entity.h  Entity3D.h  Loader.h  MeshEntity.h  Particles.h  RenderEntity.h  Scene.cpp  Scene.h
src/core/world/: World.cpp  World.h
vcpkg/: .gitignore
vcpkg/ports/3fd/: RapidXML.patch
vcpkg/ports/angle/: 002-fix-builder-error.patch
vcpkg/ports/azure-macro-utils-c/: portfile.cmake
vcpkg/ports/draco/: fix-uwperror.patch
vcpkg/ports/ffmpeg/: 0013-define-WINVER.patch
vcpkg/ports/freeopcua/: boost-compatibility.patch  fix-std-headers.patch
vcpkg/ports/gsl/: 0002-add-fp-control.patch
vcpkg/ports/imgui/: CMakeLists.txt
vcpkg/ports/jsonnet/: 0004-incorporate-md5.patch  0005-use-upstream-rapidyaml.patch
vcpkg/ports/libexif/: fix-ssize.patch
vcpkg/ports/libimobiledevice/: 001_fix_msvc.patch
vcpkg/ports/libimobiledevice-glue/: 001_fix_win32_defs.patch
vcpkg/ports/liblrc/: fix-cmake.patch
vcpkg/ports/libmount/: hide-private-symbols.diff
vcpkg/ports/libnoise/: fix-build.patch
vcpkg/ports/libtorch/: fix-build.patch
vcpkg/ports/libxfont/: build.patch
vcpkg/ports/libxmlmm/: CMakeLists.txt
vcpkg/ports/lief/: fix-vcpkg-includes.patch
vcpkg/ports/nanovg/: CMakeLists.txt
vcpkg/ports/netgen/: cross-build.patch
vcpkg/ports/poco/: 0002-arm64-pcre.patch
vcpkg/ports/quickfix/: 00001-fix-build.patch
vcpkg/ports/rabit/: fix-file-conflict.patch
vcpkg/ports/rapidxml-ns/: portfile.cmake
vcpkg/ports/sdl1-mixer/: SDL_mixer.vcxproj.in
vcpkg/ports/snap7/: CMakeLists.txt
vcpkg/ports/sparsepp/: CMakeLists.txt
vcpkg/ports/v8/: v8.patch
vcpkg/ports/winpcap/: wpcap.vcxproj.in
vcpkg/scripts/buildsystems/: vcpkg.cmake
(+34 files in other folders)
